@@ -1,5 +1,8 @@
 AUX drone-1.1.0.confd 1272 BLAKE2B 9722097b271e1b688559d2fbcd0e91decc03deaf868e91c62fe26c88b4f72806fc0fd628f4b47750ff707904bd88c5223ae58f0360a1c563ffe7bb11e08446fc SHA512 3960d26f6fa41eb3c6e9ccc719ac6c6ff7508f72c82507b2b2d5a6e7b88ce894933ee24ea73f2bc3c1a4460d12db78877805369def378f7d1d499c498a7a4f50
 AUX drone-1.1.0.initd 1851 BLAKE2B 89a15a0061c106e47d6c89267e697029ca2eef4d2d9920860e6b197f0cb8d58e5cbe37fd5223d5117ce3a3d3d827e0f36f9c34f97df6c3f697701cbd68a18337 SHA512 c8ab93b38715fe358bf92cfde29ec963bfd4849cf7e3e9d12d0476ac50de274957fd48de3cfc0ecf572a4c3581429a40c474a5342708777bc4ef4d41e9b2787a
+AUX drone-1.2.3.confd 1272 BLAKE2B 9722097b271e1b688559d2fbcd0e91decc03deaf868e91c62fe26c88b4f72806fc0fd628f4b47750ff707904bd88c5223ae58f0360a1c563ffe7bb11e08446fc SHA512 3960d26f6fa41eb3c6e9ccc719ac6c6ff7508f72c82507b2b2d5a6e7b88ce894933ee24ea73f2bc3c1a4460d12db78877805369def378f7d1d499c498a7a4f50
+AUX drone-1.2.3.initd 1893 BLAKE2B 341983efd9f7e40f702d78782f9d0bc29ca4e919057dde742a4d49291fea61af82b0e474232f83b361894925608919674c7620447743e7b1c4b4bca70db52997 SHA512 887984ae903f2b162cb43b8fb5b5019f742a1891208a3f3f54ef6681a32aa279bcf4b9c758dc7652abbfd245bc2af38c0c199ff90b4a88c6bc00d55942592df2
 EBUILD drone-1.1.0.ebuild 523 BLAKE2B 20ec727b9488eab0e2c9c7eabc6845ec9705ad3bdfb70803cefc52a4e85ca87f81d9089272c60e3ace8860eb5260e6348aae9f8b719c478e69dca8207d8323bc SHA512 b3ba803d16f6cc8acffcd19c96c993f502551ff0388bf0e5dc6b8c87f7a9389e3da5390de0ec326db617aea96344a46fcb7095bac17280185b61cce06bc6905f
-MISC ChangeLog 201 BLAKE2B 3669f8a0a0e902e117fac513aebbb0b6c2ede455e95037a69c696f135581bfa1c6e43f55ebde27e96312a1122d68b40943f0fbf2ae426c0c28770f417cae7a4e SHA512 6939024478937ac39c91f98125b2735d1521e5c15a14783f44fe40e26bf9840f9d4dbdbc2b65b559f9446650b86daf599f2b640b87dbee84e78ec2b2c1a32e37
+EBUILD drone-1.2.3.ebuild 523 BLAKE2B 20ec727b9488eab0e2c9c7eabc6845ec9705ad3bdfb70803cefc52a4e85ca87f81d9089272c60e3ace8860eb5260e6348aae9f8b719c478e69dca8207d8323bc SHA512 b3ba803d16f6cc8acffcd19c96c993f502551ff0388bf0e5dc6b8c87f7a9389e3da5390de0ec326db617aea96344a46fcb7095bac17280185b61cce06bc6905f
+MISC ChangeLog 505 BLAKE2B 0b850630e2d5ab0118f49341e6919cb0f28acf8ae644e492ebe8b085f4cf9435b138bc56587f1b549d2f13d11a3347e2fd4834593b74ea21be5b053f5c2c7e8e SHA512 e2b865dd734753705fe352184806ff13c0d7c807859a66f64e8e378d3fe044c73377729f71a01156b80deff984630ff0caf7fb16c5b1e45f6dfddb93acdaa5b3
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
